fix: avoid flickers on fields by making them shorter on hover

--- a/src/pages/FormEditor/FormSandbox/FormStructure/FormFieldElement/style.module.css
+++ b/src/pages/FormEditor/FormSandbox/FormStructure/FormFieldElement/style.module.css
@@ -25,6 +25,12 @@
     box-sizing: border-box;
 }
 
+.placeholderField {
+    min-height: 76px;
+    display: flex;
+    align-items: center;
+}
+
 .header {
     display: flex;
     align-items: center;
